--- a/pom.xml
+++ b/pom.xml
@@ -64,14 +64,21 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
-            <version>1.2.16</version>
+            <version>1.2.18</version>
         </dependency>
 
-        <!-- MySQL驱动依赖 -->
+        <!-- 动态数据源 -->
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <scope>runtime</scope>
+            <groupId>com.baomidou</groupId>
+            <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+            <version>3.6.1</version>
+        </dependency>
+
+        <!-- PostgreSQL驱动依赖 -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.27</version>
         </dependency>
 
         <!-- GeoTools依赖 -->
@@ -152,7 +159,6 @@
                 <version>${spring-boot.version}</version>
                 <configuration>
                     <mainClass>com.zjxy.gisdataimport.GisDataImportApplication</mainClass>
-                    <skip>true</skip>
                 </configuration>
                 <executions>
                     <execution>
