--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,12 @@
-# 数据库配置 - MySQL (优化大数据量处理)
-spring.datasource.url=jdbc:mysql://localhost:3306/gisdb?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&rewriteBatchedStatements=true&useServerPrepStmts=false&cachePrepStmts=true&prepStmtCacheSize=250&prepStmtCacheSqlLimit=2048
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=@Zhang316480
+# 应用配置
+server.port=8080
+spring.application.name=gis-data-import
+spring.profiles.active=dev
 
-# Druid连接池配置 (阿里巴巴)
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.druid.initial-size=5
-spring.datasource.druid.min-idle=5
-spring.datasource.druid.max-active=20
-spring.datasource.druid.max-wait=60000
-spring.datasource.druid.time-between-eviction-runs-millis=60000
-spring.datasource.druid.min-evictable-idle-time-millis=300000
-spring.datasource.druid.validation-query=SELECT 1 FROM DUAL
-spring.datasource.druid.test-while-idle=true
-spring.datasource.druid.test-on-borrow=false
-spring.datasource.druid.test-on-return=false
-spring.datasource.druid.pool-prepared-statements=true
-spring.datasource.druid.max-pool-prepared-statement-per-connection-size=20
-spring.datasource.druid.filters=stat,wall,slf4j
+# 模板功能配置
+gis.template.enabled=true
+gis.template.default-database=resourcemanage
+gis.template.validation.enabled=true
 spring.datasource.druid.connection-properties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 
 # MyBatis-Plus配置
@@ -46,13 +34,13 @@ spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
 # 服务端口
-server.port=8080
+#server.port=8080
 
 # ========== 性能测试配置 ==========
 # 测试模式开关
 test.performance.enabled=true
 # 测试数据量限制 (1万条)
-test.performance.max-records=10000
+test.performance.max-records=1000
 # 处理方法选择: original(原始) 或 optimized(优化)
 test.performance.method=optimized
 # 详细日志开关
@@ -64,9 +52,9 @@ test.performance.clear-table-before-test=false
 # 是否启用坐标转换
 gis.coordinate.transform.enabled=true
 # 源坐标系（Shapefile数据的原始坐标系）
-gis.coordinate.transform.source-coord-system=CGCS2000
+gis.coordinate.transform.source-coord-system=CGCS2000XY
 # 目标坐标系（转换后存储的坐标系）
-gis.coordinate.transform.target-coord-system=CGCS2000XY
+gis.coordinate.transform.target-coord-system=CGCS2000
 # 是否记录转换日志
 gis.coordinate.transform.log-transformation=true
 # 转换失败策略：KEEP_ORIGINAL(保留原始), SET_ERROR(设置错误标记), SKIP_RECORD(跳过记录)
