新增获取模板,修改了接口,使用模板解析数据还待修改

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,7 +39,7 @@ spring.servlet.multipart.max-request-size=100MB
 # ========== 性能测试配置 ==========
 # 测试模式开关
 test.performance.enabled=true
-# 测试数据量限制 (1万条)
+# 测试数据量限制
 test.performance.max-records=1000
 # 处理方法选择: original(原始) 或 optimized(优化)
 test.performance.method=optimized
@@ -50,7 +50,7 @@ test.performance.clear-table-before-test=false
 
 # ========== 坐标转换配置 ==========
 # 是否启用坐标转换
-gis.coordinate.transform.enabled=true
+gis.coordinate.transform.enabled=false
 # 源坐标系（Shapefile数据的原始坐标系）
 gis.coordinate.transform.source-coord-system=CGCS2000XY
 # 目标坐标系（转换后存储的坐标系）
