--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,15 @@ server.port=8080
 spring.application.name=gis-data-import
 spring.profiles.active=dev
 
+# 临时允许循环引用（后续需要重构移除）
+spring.main.allow-circular-references=true
+
 # 模板功能配置
 gis.template.enabled=true
 gis.template.default-database=resourcemanage
 gis.template.validation.enabled=true
+gis.template.remote-database.enabled=true
+gis.template.auto-create-table=false
 spring.datasource.druid.connection-properties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 
 # MyBatis-Plus配置
@@ -38,15 +43,17 @@ spring.servlet.multipart.max-request-size=100MB
 
 # ========== 性能测试配置 ==========
 # 测试模式开关
-test.performance.enabled=true
+test.performance.enabled=false
 # 测试数据量限制
-test.performance.max-records=1000
+test.performance.max-records=100000
 # 处理方法选择: original(原始) 或 optimized(优化)
 test.performance.method=optimized
 # 详细日志开关
 test.performance.verbose-logging=true
 # 测试前是否清空表
-test.performance.clear-table-before-test=false
+test.performance.clear-table-before-test=true
+# 清空表时是否重置序列
+test.performance.reset-sequence=true
 
 # ========== 坐标转换配置 ==========
 # 是否启用坐标转换
