--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,7 +45,7 @@ spring.servlet.multipart.max-request-size=100MB
 # 测试模式开关
 test.performance.enabled=false
 # 测试数据量限制
-test.performance.max-records=100000
+test.performance.max-records=1000000
 # 处理方法选择: original(原始) 或 optimized(优化)
 test.performance.method=optimized
 # 详细日志开关
@@ -59,9 +59,9 @@ test.performance.reset-sequence=true
 # 是否启用坐标转换
 gis.coordinate.transform.enabled=false
 # 源坐标系（Shapefile数据的原始坐标系）
-gis.coordinate.transform.source-coord-system=CGCS2000XY
+gis.coordinate.transform.source-coord-system=
 # 目标坐标系（转换后存储的坐标系）
-gis.coordinate.transform.target-coord-system=CGCS2000
+gis.coordinate.transform.target-coord-system=
 # 是否记录转换日志
 gis.coordinate.transform.log-transformation=true
 # 转换失败策略：KEEP_ORIGINAL(保留原始), SET_ERROR(设置错误标记), SKIP_RECORD(跳过记录)
